Update gradle to 6.5 and minimal Java version to 11